--- a/utah/patient/templates/patient/edit_traitement.html
+++ b/utah/patient/templates/patient/edit_traitement.html
@@ -8,10 +8,11 @@
 
 </style>
 
-<a href="{% url 'patient:detail' patient.slug %}" style="border-radius: 0;" class="btn btn-dark"><</a>
+<script> document.getElementById('ppage').href = "{% url 'patient:detail' patient.slug %}" </script>
 
+<br>
 <div class="container px-4">
-  <h2 align="center"> Patient n°{{patient.incl_num}} </h2>
+  <h2 align="center"> PATIENT N°{{patient.incl_num}} </h2>
   <hr>
   <form method="post" class="create-form" id="myform">
     {% csrf_token %}
@@ -29,10 +30,10 @@
 
     <input type="hidden" name="submitType" id="submitType">
     <button type="submit" class="btn btn-success">Modifier</button>
-    <button type="submit" onclick='document.getElementById("submitType").value = "delete"' class="btn btn-danger">Supprimer le traitement</button>
+    <button onclick='document.getElementById("submitType").value = "delete"' class="btn btn-danger">Supprimer le traitement</button>
 
     {% if traitement.conclusion %}
-      <button type="submit" onclick='document.getElementById("submitType").value = "reset"' class="btn btn-outline-danger">Réinitialiser le résultat</button>
+      <button onclick='document.getElementById("submitType").value = "reset"' class="btn btn-outline-danger">Réinitialiser le résultat</button>
     {% endif %}
   </form>
 
