--- a/utah/templates/base.html
+++ b/utah/templates/base.html
@@ -29,9 +29,13 @@
 <!-- Body -->
 <style type="text/css">
 	.main{
-		min-height: 100vh;
 		height: 100%;
 	}
+  body
+  {
+      overflow-y: auto;
+  }
+
 </style>
 <div class="main">
 	{% block content %}
