--- a/utah/algorithm/templates/algorithm/algo_manager.html
+++ b/utah/algorithm/templates/algorithm/algo_manager.html
@@ -44,7 +44,7 @@
     <img src="{% static 'images/previous.svg' %}" class="icon1" width="80px"/>
   </button>
 
-  <h3> Patient n°{{patient.incl_num}}</h3>
+  <h3> PATIENT N°{{patient.incl_num}}</h3>
 
   <div id="question-container">
     <div class="progress">
