--- a/utah/patient/templates/patient/postop_patient.html
+++ b/utah/patient/templates/patient/postop_patient.html
@@ -30,12 +30,12 @@
 
 </style>
 
-<a href="{% url 'patient:detail' patient.slug %}" style="border-radius: 0;" class="btn btn-dark"><</a>
+<script> document.getElementById('ppage').href = "{% url 'patient:detail' patient.slug %}" </script>
 
 <form method="post" class="create-form">
   {% csrf_token %}
   <br>
-  <h3> Patient n° {{patient.incl_num}} | Saisie des données post-opératoires </h3> <hr>
+  <h3> PATIENT N° {{patient.incl_num}} | Saisie des données post-opératoires </h3> <hr>
   {% include 'patient/snippets/field2html.html' with field=form.schema_therap %}
 
   <div class="table-responsive">
