--- a/utah/personal/templates/personal/home.html
+++ b/utah/personal/templates/personal/home.html
@@ -6,12 +6,12 @@
 {% block content %}
 <style type="text/css">
     #centered-buttons {
-      padding-top: 15px;
+      padding-top: 30px;
       margin: 0 auto;
       text-align: center;
-      top: 30%;
       left: 25%;
       right: 25%;
+      /* position: fixed; */
       }
 
   .btn {
@@ -22,17 +22,16 @@
 
 </style>
 
-
 <div id='centered-buttons'>
-<a type="button" href="{% url 'patient:preop' %}" class="btn btn-outline-success">
-  <img src="{% static 'images/add_patient.svg' %}" class="icon1" width="80px"/>
-  <p> Inclure un nouveau patient</p>
-</a>
-<br><br>
-<a type="button" href="{% url 'patient:patients' 'all' %}" class="btn btn-outline-success">
-  <img src="{% static 'images/find_patient.svg' %}" class="icon1" width="80px" />
-  <p> Retrouver un patient déjà inclus</p>
-</a>
+  <a type="button" href="{% url 'patient:preop' %}" class="btn btn-outline-success">
+    <img src="{% static 'images/add_patient.svg' %}" class="icon1" width="80px"/>
+    <p> Inclure un nouveau patient</p>
+  </a>
+  <br><br>
+  <a type="button" href="{% url 'patient:patients' 'all' %}" class="btn btn-outline-success">
+    <img src="{% static 'images/find_patient.svg' %}" class="icon1" width="80px" />
+    <p> Retrouver un patient déjà inclus</p>
+  </a>
 </div>
 
 {% endblock content %}
