--- a/utah/templates/snippets/base_css.html
+++ b/utah/templates/snippets/base_css.html
@@ -2,6 +2,11 @@
 	body{
 		background-color: #f2f2f2;
 	}
+	.icon {
+    color: white;
+		filter: invert(100%) sepia(0%) saturate(500%) brightness(120%) contrast(100%) hue-rotate(90deg);		
+  }
+
 	.icon1 {
     color: white;
     filter: invert(50%) sepia(50%) saturate(500%) brightness(120%) contrast(100%) hue-rotate(90deg);
