--- a/utah/personal/templates/personal/pdf_template.html
+++ b/utah/personal/templates/personal/pdf_template.html
@@ -4,6 +4,9 @@
 {% load bootstrap %}
 {% load static %}
 <style type="text/css">
+  .body {
+    font-family: georgia;
+  }
   .logo {
     margin-right: 30px;
     width: 200px;
@@ -16,7 +19,7 @@
   }
   .h {
     font-weight: bold;
-    width: 180px;
+    width: 220px;
   }
 
   h1 {
