--- a/utah/patient/templates/patient/snippets/field2html.html
+++ b/utah/patient/templates/patient/snippets/field2html.html
@@ -26,7 +26,7 @@
 
   <!-- label -->
   {% if not nolabel %}
-    <label for={{field.name}}>{{field.label}}</label>
+    <label class="shrinkable" for={{field.name}}>{{field.label}}</label>
   {% endif %}
 
   <!-- raise errors -->
