--- a/utah/templates/snippets/base_css.html
+++ b/utah/templates/snippets/base_css.html
@@ -2,6 +2,9 @@
 	body{
 		background-color: #f2f2f2;
 	}
+	.shrinkable {
+		white-space: nowrap;
+	}
 	.icon {
     color: white;
 		filter: invert(100%) sepia(0%) saturate(500%) brightness(120%) contrast(100%) hue-rotate(90deg);
