fix delete result issue

--- a/utah/patient/templates/patient/edit_traitement.html
+++ b/utah/patient/templates/patient/edit_traitement.html
@@ -29,7 +29,7 @@
     <br><br>
 
     <input type="hidden" name="submitType" id="submitType">
-    <button type="submit" class="btn btn-success">Modifier</button>
+    <button type="submit" class="btn btn-success">Valider</button>
     <button onclick='document.getElementById("submitType").value = "delete"' class="btn btn-danger">Supprimer le traitement</button>
 
     {% if traitement.conclusion %}
